test/corpus/strings.txt
======
Simple
======

A = "Hello world\r\n";

---

(source_file
 (assignment
  (variable_name)
  (string
   (quoted_literal
	(escape_sequence)
	(escape_sequence)))))

==============
Mixed sequence
==============

A = 'Hello',0x20,"world""",CR LF;

---

(source_file
 (assignment
  (variable_name)
  (string
   (quoted_literal)
   (number)
   (quoted_literal)
   (quoted_literal)
   (ascii_name)
   (ascii_name))))

===============
Number sequence
===============

A = 72 101 108 108 111 32 119 111 114 108 100 13 10;

---

(source_file
 (assignment
  (variable_name)
  (string
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number)
   (number))))

=====
CR LF
=====

A = cr lf;

---

(source_file
 (assignment
  (variable_name)
  (string (ascii_name) (ascii_name))))
