test/corpus/variables.txt
==================
Variable expansion
==================

a { out "\$var\${var}$notvar" }

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (variable_expansion (variable_name))
	 (variable_expansion (variable_name)))))))

===========================
Protocol argument expansion
===========================

a { out "\$1" }

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (variable_expansion (variable_name)))))))

=================
In enum constants
=================

s0 = false;
s1 = true;
bo {
	out '%{\${s0}|the\${s1}}';
}

---

(source_file
 (assignment (variable_name) (string (ascii_name)))
 (assignment (variable_name) (string (ascii_name)))
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (format_converter
	  (format_enum
	   (enum_specifier
		(enum_constant (variable_expansion (variable_name))))
	   (enum_specifier
		(enum_constant (variable_expansion (variable_name)))))))))))
